Add functional test

--- a/tests/functional.suite.yml
+++ b/tests/functional.suite.yml
@@ -17,11 +17,11 @@ modules:
             user: '%TEST_SITE_DB_USER%'
             password: '%TEST_SITE_DB_PASSWORD%'
             dump: 'tests/_data/dump.sql'
-            populate: true
+            populate: false
             cleanup: true
             waitlock: 10
             url: '%TEST_SITE_WP_URL%'
-            urlReplacement: true
+            urlReplacement: false
             tablePrefix: '%TEST_SITE_TABLE_PREFIX%'
         WPBrowser:
             url: '%TEST_SITE_WP_URL%'
